--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,6 @@
 :root {
+  --background-color: #f8f9fa;
+  --text-color: #212529;
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -42,6 +44,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --background-color: #212529;
+    --text-color: #f8f9fa;
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
